[package]
name = "s3stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argh = "0.1.9"
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
bytes = "1.3.0"
flate2 = "1.0.25"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.3.1"
